src/parser/grammar/test_samples/Invalid/namespace_import_legacy_use.5th
use Utilities.Math;

main(): int {
    return 0;
}
